fix: use font-display auto to prevent layout shift

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'Inter var';
   font-weight: 100 900;
-  font-display: swap;
+  font-display: auto;
   font-style: normal;
   font-named-instance: 'Regular';
   src: url("../fonts/Inter-roman.var.woff2") format("woff2");
